--- a/src/components/use-cases/BrowseTemplates.module.scss
+++ b/src/components/use-cases/BrowseTemplates.module.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/mixins";
 
 .browseTemplates {
-  background: var(--primary-black);
+  //background: var(--primary-black);
   padding: 64px 0; // 64px = 4 * 16px grid
 }
 
