--- a/src/components/common/LargeTemplateCard.module.scss
+++ b/src/components/common/LargeTemplateCard.module.scss
@@ -15,6 +15,7 @@
   overflow: hidden;
 
   &:hover {
+    background: #11182780;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
     transform: translateY(-2px);
     border-color: rgba(255, 255, 255, 0.2);
