Increase subcategories indentation in Browse Templates sidebar
- Change subcategories margin-left from 32px to 64px
- Subcategories now have 32px additional right indent as specified

--- a/src/components/use-cases/BrowseTemplates.module.scss
+++ b/src/components/use-cases/BrowseTemplates.module.scss
@@ -518,7 +518,7 @@
 }
 
 .subcategories {
-  margin-left: 32px; // 32px additional indent from category text start
+  margin-left: 64px; // 64px (32px + 32px) additional indent from category text start
   margin-top: 24px; // 24px = 1.5 * 16px
   display: flex;
   flex-direction: column;
