--- a/src/components/pages/ContactUs/Template/styles.module.scss
+++ b/src/components/pages/ContactUs/Template/styles.module.scss
@@ -84,6 +84,12 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+
+  &__title {
+    color: var(--interface-light-gray-75);
+    margin-bottom: var(--spacer-1);
+    font-size: 1.5rem !important;
+  }
 }
 
 .heading {
