--- a/src/components/pages/ContactUs/Template/styles.module.scss
+++ b/src/components/pages/ContactUs/Template/styles.module.scss
@@ -25,6 +25,27 @@
     background: none;
   }
 
+  :global(.company-typeahead) {
+    input {
+      white-space: nowrap !important;
+      overflow: hidden !important;
+      text-overflow: ellipsis !important;
+      padding-right: 30% !important;
+
+      @media (max-width: 1055px) {
+        padding-right: 15% !important;
+      }
+
+      @include media-breakpoint-down(sm) {
+        padding-right: 20% !important;
+      }
+
+      @media (max-width: 420px) {
+        padding-right: 25% !important;
+      }
+    }
+  }
+
   :global(.notice-choice) {
     margin-top: var(--spacer-1) !important;
   }
