--- a/src/components/common/FilterPill.module.scss
+++ b/src/components/common/FilterPill.module.scss
@@ -15,7 +15,13 @@
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 2px $templates-ring;
+    box-shadow: none; // prevent purple focus ring
+  }
+
+  &:focus-visible {
+    outline: none;
+    box-shadow: none; // prevent purple focus ring across browsers
+    border-color: rgba(255, 255, 255, 0.35); // subtle neutral focus
   }
 
   &.selected {
