--- a/src/components/pages/ContactUs/Template/styles.module.scss
+++ b/src/components/pages/ContactUs/Template/styles.module.scss
@@ -119,7 +119,7 @@
   font-weight: 400 !important;
   line-height: 120% !important;
   letter-spacing: -0.48px !important;
-  margin-bottom: 12px;
+  margin-bottom: 12px !important;
 
   @include media-breakpoint-down(md) {
     font-size: 32px !important;
@@ -131,7 +131,7 @@
   font-size: 18px !important;
   font-weight: 300 !important;
   line-height: 140% !important;
-  margin-bottom: 40px;
+  margin-bottom: 40px !important;
   text-align: center;
 
   @include media-breakpoint-down(md) {
