--- a/src/components/ui/UrxForms/styles.module.scss
+++ b/src/components/ui/UrxForms/styles.module.scss
@@ -76,6 +76,41 @@
     }
   }
 
+  :global(.cds--text-area__label-wrapper) {
+    label {
+      display: flex !important;
+      flex-direction: row !important;
+      gap: 20px !important;
+    }
+  }
+
+  :global(.cds--text-area__wrapper) {
+    textarea {
+      border-radius: 6px;
+      border: 1px solid var(--interface-dark-gray-250);
+      color: var(--primary-white);
+      font-family: var(--font-inter) !important;
+      font-size: 14px !important;
+      background: var(--primary-black) !important;
+      line-height: 1.5;
+      outline-offset: 0;
+      padding: 0.5rem 0.75rem;
+      height: 2.75em;
+      background-color: var(--primary-black) !important;
+
+      &:focus,
+      &:focus-visible {
+        outline: none !important;
+        border-color: var(--interface-blue-200);
+      }
+
+      &:disabled {
+        background: var(--interface-light-gray-100);
+        border-color: var(--interface-light-gray-100);
+      }
+    }
+  }
+
   input[type="text"],
   input[type="tel"],
   input[type="email"],
