--- a/src/components/ui/Header/styles.module.scss
+++ b/src/components/ui/Header/styles.module.scss
@@ -3,12 +3,13 @@
 
 .header {
   background: var(--primary-black);
-  padding: 24px 32px;
+  padding: 32px;
   color: var(--primary-white);
   font-family: var(--font-inter);
-  transition: background-color 0.3s ease, position 0.3s ease;
-  
-  // Transparent background for use-cases and template pages
+  transition:
+    background-color 0.3s ease,
+    position 0.3s ease;
+
   &.transparent {
     background: transparent;
     position: absolute;
