--- a/src/components/ui/UrxForms/styles.module.scss
+++ b/src/components/ui/UrxForms/styles.module.scss
@@ -15,6 +15,18 @@
     display: none !important;
   }
 
+  :global(.country-container) {
+    min-width: 100% !important;
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+
+  :global(.company-container) {
+    min-width: 100% !important;
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+
   :global(.cds--fieldset) {
     margin-bottom: 20px !important;
   }
@@ -108,7 +120,7 @@
 
   label {
     color: var(--primary-white);
-    font-family: var(--font-inter) !important;
+    font-family: var(--font-body) !important;
     font-weight: 600;
     line-height: 1.43em;
     font-size: 14px;
@@ -136,7 +148,7 @@
 
   :global(.cds--text-area__wrapper) {
     textarea {
-      border-radius: 6px;
+      border-radius: 4px;
       border: 1px solid var(--interface-dark-gray-250);
       color: var(--primary-white);
       font-family: var(--font-inter) !important;
@@ -169,7 +181,7 @@
   input[type="url"],
   select,
   textarea {
-    border-radius: 6px;
+    border-radius: 4px;
     border: 1px solid var(--interface-dark-gray-250);
     color: var(--primary-white);
     font-family: var(--font-inter) !important;
@@ -210,7 +222,7 @@
       rgb(134, 239, 172),
       rgb(59, 130, 246)
     );
-    border-radius: 6px;
+    border-radius: 8px;
     box-shadow: rgba(134, 239, 172, 0.3) 0px 0px 20px;
     background-color: var(--primary-black) !important;
     font-size: 16px !important;
